# WebService

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  run.py
.github/workflows/: pre-commit-action.yaml
cli/: main.py  setup.py
cli/development/: main.py
compose/mysql/initdb/: 01-initial.sql
omdb/: app.py  error_handlers.py  log.py  login_manager.py  request_hooks.py
omdb/config/: __init__.py  base.py  development.py  environment.py  production.py
omdb/controllers/: movie_create_from_title.py  movie_delete.py  user_delete.py  user_register.py
omdb/controllers/movie/: movie_create.py  movie_create_from_title.py  movie_multiple.py  movie_one.py
omdb/controllers/user/: user_login.py
omdb/db/: base.py  model.py  query.py
omdb/exceptions/: base.py
omdb/models/: movie.py  user.py
omdb/routes/: login.py  movie.py
omdb/schema/: base.py  build_db.py  fields.py  movie.py  user.py
omdb/templates/: auth.html
omdb/utils/: build_db.py  form.py  hashers.py  http.py  request.py
omdb/views/: movie_create.py  movie_create_from_title.py  movie_delete.py  movie_multiple.py  movie_one.py  user_delete.py  user_login.py  user_register.py
omdb/views/movie/: movie_create.py  movie_create_from_title.py  movie_delete.py  movie_multiple.py  movie_one.py
omdb/views/user/: user_delete.py  user_login.py  user_logout.py  user_register.py
tests/: conftest.py  shared.py
tests/config/: test_base.py  test_environment.py
tests/db/: test_base.py  test_model.py  test_query.py
tests/models/: test_movie.py
tests/schema/: test_base.py  test_build_db.py
tests/shared/: base.py  error_handlers.py  http.py  request_hooks.py
tests/utils/: test_build_db.py  test_http.py  test_request.py
tests/views/: test_error_handlers.py  test_movie_delete.py  test_request_hooks.py  test_user_delete.py  test_user_login.py
tests/views/movie/: test_movie_create.py  test_movie_create_from_title.py  test_movie_delete.py  test_movie_multiple.py  test_movie_one.py
tests/views/user/: test_user_login.py  test_user_logout.py  test_user_register.py
