[project]
name = "webservice"
version = "1.0"
description = "A simple web application to fetch OMDB movies"
readme = "README.md"
maintainers = [{name = "Pradeep Tammali", email = "pradeepkumartammali@gmail.com"}]

[tool.autopep8]
in-place = false
max_line_length = 120

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
ignore = [
  # format
  'E501', # line too long
]
line-length = 120
select = [
  'E', # Errors
  'W', # Warnings
  'F', # Formatting
  'S', # Bandit
]
target-version = 'py311'

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = 'single'

[tool.flake8]
ignore = ['E501']

[tool.pytest.ini_options]
filterwarnings = [
  "error",
]
testpaths = ["tests"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = 'omdb.*'

[tool.pylint.FORMAT]
indent-string = '    '
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = '''
    missing-docstring,
    line-too-long,
    import-error,
'''
