[project]
name = "webservice"
version = "1.0"
description = "A simple web application to fetch OMDB movies"
readme = "README.md"
maintainers = [
  { name = "Pradeep Tammali", email = "pradeepkumartammali@gmail.com" },
]

[tool.autopep8]
in-place = false
max_line_length = 120

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
ignore = [
  # format
  'E501', # line too long
]
line-length = 120
select = [
  'E', # Errors
  'W', # Warnings
  'F', # Formatting
  'S', # Bandit
]
target-version = 'py311'

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.per-file-ignores]
# Ignore assert usage in tests
'tests/*.py' = ['S101']

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
ignore = ['E501']

[tool.pytest.ini_options]
env = [
  'APP_ENVIRONMENT = unittest',
  # Uncomment following for pytest to choose mysql as database
  # 'SERVICE_DATABASE_USER = root',
  # 'SERVICE_DATABASE_PASSWORD = 1234',
  # 'SERVICE_DATABASE_HOST = mysql',
  # 'SERVICE_DATABASE_PORT = 3308',
]

[tool.coverage.run]
include = ['omdb/*']

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = 'omdb.*'

[tool.pylint.MASTER]
ignore-paths = ['tests/*']

[tool.pylint.FORMAT]
indent-string = '    '
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = '''
    missing-docstring,
    line-too-long,
    import-error,
    fixme,
    no-value-for-parameter
'''

[tool.bandit]
exclude_dirs = ["tests/*"]
